Adds action listeners to search elements

--- a/src/gui/lab2/MainView.fxml
+++ b/src/gui/lab2/MainView.fxml
@@ -35,32 +35,32 @@
                                           <Font size="36.0" />
                                        </font>
                                     </Label>
-                                    <ComboBox fx:id="comboCuisine" maxWidth="1.7976931348623157E308" prefHeight="51.0" prefWidth="1.0E22" promptText="Kök">
+                                    <ComboBox fx:id="comboCuisine" maxWidth="1.7976931348623157E308" onAction="#comboCuisineOnAction" prefHeight="51.0" prefWidth="1.0E22" promptText="Kök">
                                        <VBox.margin>
                                           <Insets />
                                        </VBox.margin>
                                     </ComboBox>
-                                    <ComboBox fx:id="comboIngredient" maxWidth="1.7976931348623157E308" prefHeight="51.0" prefWidth="403.0" promptText="Huvudingrediens" />
+                                    <ComboBox fx:id="comboIngredient" maxWidth="1.7976931348623157E308" onAction="#comboIngredientOnAction" prefHeight="51.0" prefWidth="403.0" promptText="Huvudingrediens" />
                                     <AnchorPane prefHeight="45.0" prefWidth="532.0">
                                        <children>
                                           <Label contentDisplay="RIGHT" maxWidth="1.7976931348623157E308" text="Maxpris (kr): " AnchorPane.leftAnchor="0.0" />
-                                          <TextField fx:id="textMaxPrice" alignment="CENTER_RIGHT" layoutX="135.0" layoutY="-7.0" maxWidth="1.7976931348623157E308" prefHeight="51.0" prefWidth="397.0" AnchorPane.leftAnchor="135.0" AnchorPane.rightAnchor="0.0" />
+                                          <TextField fx:id="textMaxPrice" alignment="CENTER_RIGHT" layoutX="135.0" layoutY="-7.0" maxWidth="1.7976931348623157E308" onAction="#textMaxPriceOnAction" prefHeight="51.0" prefWidth="397.0" AnchorPane.leftAnchor="135.0" AnchorPane.rightAnchor="0.0" />
                                        </children>
                                     </AnchorPane>
                                     <HBox maxWidth="1.7976931348623157E308" prefHeight="60.0" prefWidth="532.0">
                                        <children>
-                                          <ToggleButton fx:id="toggleEasy" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="51.0" selected="true" styleClass="easy" text="Lätt" HBox.hgrow="ALWAYS">
+                                          <ToggleButton fx:id="toggleEasy" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#toggleDiffOnAction" prefHeight="51.0" selected="true" styleClass="easy" text="Lätt" HBox.hgrow="ALWAYS">
                                              <toggleGroup>
                                                 <ToggleGroup fx:id="diff" />
                                              </toggleGroup>
                                           </ToggleButton>
-                                          <ToggleButton fx:id="toggleMedium" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="medium" text="Mellan" toggleGroup="$diff" HBox.hgrow="ALWAYS" />
-                                          <ToggleButton fx:id="toggleHard" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="51.0" styleClass="hard" text="Svår" toggleGroup="$diff" HBox.hgrow="ALWAYS" />
+                                          <ToggleButton fx:id="toggleMedium" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#toggleDiffOnAction" styleClass="medium" text="Mellan" toggleGroup="$diff" HBox.hgrow="ALWAYS" />
+                                          <ToggleButton fx:id="toggleHard" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#toggleDiffOnAction" prefHeight="51.0" styleClass="hard" text="Svår" toggleGroup="$diff" HBox.hgrow="ALWAYS" />
                                        </children>
                                     </HBox>
                                     <AnchorPane prefHeight="91.0" prefWidth="532.0">
                                        <children>
-                                          <Slider fx:id="sliderMaxTime" layoutY="49.0" majorTickUnit="20.0" max="150.0" maxWidth="1.7976931348623157E308" min="10.0" minorTickCount="1" prefHeight="28.0" prefWidth="533.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                                          <Slider fx:id="sliderMaxTime" layoutY="49.0" majorTickUnit="20.0" max="150.0" maxWidth="1.7976931348623157E308" min="10.0" minorTickCount="1" onDragDone="#sliderMaxTimeOnSelected" prefHeight="28.0" prefWidth="533.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
                                           <Label alignment="CENTER" contentDisplay="BOTTOM" maxWidth="1.7976931348623157E308" prefHeight="35.0" prefWidth="416.0" text="Maxtid (minuter)" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
                                        </children>
                                     </AnchorPane>
