--- a/src/gui/lab2/MainView.fxml
+++ b/src/gui/lab2/MainView.fxml
@@ -44,7 +44,7 @@
                                     <AnchorPane prefHeight="45.0" prefWidth="532.0">
                                        <children>
                                           <Label contentDisplay="RIGHT" maxWidth="1.7976931348623157E308" text="Maxpris (kr): " AnchorPane.leftAnchor="0.0" />
-                                          <TextField fx:id="textMaxPrice" alignment="CENTER_RIGHT" layoutX="135.0" layoutY="-7.0" maxWidth="1.7976931348623157E308" onAction="#textMaxPriceOnAction" prefHeight="51.0" prefWidth="397.0" AnchorPane.leftAnchor="135.0" AnchorPane.rightAnchor="0.0" />
+                                          <TextField fx:id="textMaxPrice" layoutX="135.0" layoutY="-7.0" maxWidth="1.7976931348623157E308" onAction="#textMaxPriceOnAction" prefHeight="51.0" prefWidth="397.0" AnchorPane.leftAnchor="135.0" AnchorPane.rightAnchor="0.0" />
                                        </children>
                                     </AnchorPane>
                                     <HBox maxWidth="1.7976931348623157E308" prefHeight="60.0" prefWidth="532.0">
@@ -60,7 +60,7 @@
                                     </HBox>
                                     <AnchorPane prefHeight="91.0" prefWidth="532.0">
                                        <children>
-                                          <Slider fx:id="sliderMaxTime" layoutY="49.0" majorTickUnit="20.0" max="150.0" maxWidth="1.7976931348623157E308" min="10.0" minorTickCount="1" onDragDone="#sliderMaxTimeOnSelected" prefHeight="28.0" prefWidth="533.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                                          <Slider fx:id="sliderMaxTime" layoutY="49.0" majorTickUnit="20.0" max="150.0" maxWidth="1.7976931348623157E308" min="10.0" minorTickCount="1" prefHeight="28.0" prefWidth="533.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
                                           <Label alignment="CENTER" contentDisplay="BOTTOM" maxWidth="1.7976931348623157E308" prefHeight="35.0" prefWidth="416.0" text="Maxtid (minuter)" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
                                        </children>
                                     </AnchorPane>
