--- a/src/gui/lab2/MainView.fxml
+++ b/src/gui/lab2/MainView.fxml
@@ -86,18 +86,6 @@
                         <Font size="57.0" />
                      </font>
                   </Label>
-                  <ImageView fitHeight="44.0" fitWidth="46.0" layoutX="22.0" layoutY="433.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="22.0" AnchorPane.topAnchor="433.0">
-                     <image>
-                        <Image url="@../../res/img/food.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="48.0" fitWidth="44.0" layoutX="234.0" layoutY="433.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="234.0" AnchorPane.topAnchor="433.0">
-                     <image>
-                        <Image url="@../../res/img/time.png" />
-                     </image>
-                  </ImageView>
-                  <Label fx:id="labelServings" layoutX="86.0" layoutY="438.0" prefHeight="35.0" prefWidth="148.0" AnchorPane.leftAnchor="86.0" AnchorPane.topAnchor="438.0" />
-                  <Label fx:id="labelTime" layoutX="298.0" layoutY="438.0" prefHeight="35.0" prefWidth="148.0" AnchorPane.leftAnchor="298.0" AnchorPane.topAnchor="438.0" />
                   <Label layoutX="22.0" layoutY="477.0" text="Ingredienser">
                      <font>
                         <Font size="43.0" />
@@ -110,14 +98,48 @@
                   </Label>
                   <Separator layoutX="433.0" layoutY="497.0" orientation="VERTICAL" prefHeight="620.0" prefWidth="6.0" />
                   <TextArea fx:id="textDescription" editable="false" layoutX="453.0" layoutY="545.0" prefHeight="558.0" prefWidth="872.0" wrapText="true" AnchorPane.bottomAnchor="37.0" AnchorPane.leftAnchor="453.0" AnchorPane.rightAnchor="17.0" AnchorPane.topAnchor="545.0" />
-                  <Label fx:id="labelVeg" layoutX="1202.0" layoutY="379.0" prefHeight="35.0" prefWidth="126.0" text="Vegetarisk" visible="false" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="379.0" />
-                  <ImageView fx:id="imgVeg" fitHeight="48.0" fitWidth="44.0" layoutX="1146.0" layoutY="375.0" pickOnBounds="true" preserveRatio="true" visible="false" AnchorPane.rightAnchor="152.0" AnchorPane.topAnchor="375.0">
-                     <image>
-                        <Image url="@../../res/img/veg.png" />
-                     </image>
-                  </ImageView>
-                  <ProgressBar fx:id="progressDiff" layoutX="454.0" layoutY="437.0" prefHeight="36.0" prefWidth="872.0" progress="0.0" AnchorPane.leftAnchor="454.0" AnchorPane.rightAnchor="16.0" />
+                  <ProgressBar fx:id="progressDiff" layoutX="21.0" layoutY="437.0" prefHeight="36.0" prefWidth="397.0" progress="0.0" AnchorPane.leftAnchor="21.0" />
                   <ListView fx:id="listIngredients" layoutX="22.0" layoutY="545.0" prefHeight="558.0" prefWidth="397.0" AnchorPane.bottomAnchor="37.0" AnchorPane.leftAnchor="22.0" AnchorPane.topAnchor="545.0" />
+                  <HBox layoutX="454.0" layoutY="432.0" prefHeight="50.0" prefWidth="874.0" spacing="20.0" AnchorPane.leftAnchor="454.0" AnchorPane.rightAnchor="16.0">
+                     <children>
+                        <Label fx:id="labelServings" text="TESTST">
+                           <graphic>
+                              <ImageView fitHeight="44.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../res/img/food.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Label>
+                        <Label fx:id="labelTime" text="TESTSt">
+                           <graphic>
+                              <ImageView fitHeight="48.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../res/img/time.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Label>
+                        <Label fx:id="labelCuisine" text="testst">
+                           <graphic>
+                              <ImageView fitHeight="44.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../res/img/kettle.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Label>
+                        <Label fx:id="labelVeg" text="Vegetarisk">
+                           <graphic>
+                              <ImageView fx:id="imgVeg" fitHeight="48.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../res/img/veg.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Label>
+                     </children>
+                  </HBox>
                </children></AnchorPane>
         </items>
       </SplitPane>
