--- a/src/gui/lab2/MainView.fxml
+++ b/src/gui/lab2/MainView.fxml
@@ -12,28 +12,28 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1142.0" prefWidth="1922.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.lab2.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="645.0" prefWidth="867.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.lab2.Controller">
    <children>
-      <SplitPane dividerPositions="0.29797979797979796" prefHeight="1142.0" prefWidth="1922.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.24032586558044808" prefHeight="1142.0" prefWidth="1922.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <SplitPane dividerPositions="0.44991212653778556" layoutX="62.0" layoutY="88.0" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <SplitPane dividerPositions="0.48673946957878317" layoutX="62.0" layoutY="88.0" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <items>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="485.0" prefWidth="564.0">
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="294.0" prefWidth="230.0">
                            <children>
-                              <VBox layoutX="18.0" layoutY="32.0" prefHeight="285.0" prefWidth="320.0" spacing="16.0" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="18.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="32.0">
+                              <VBox layoutX="18.0" layoutY="16.0" spacing="16.0" AnchorPane.bottomAnchor="48.0" AnchorPane.leftAnchor="18.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="16.0">
                                  <children>
                                     <Label maxWidth="1.7976931348623157E308" text="Sök på recept">
                                        <graphic>
-                                          <ImageView fitHeight="65.0" fitWidth="65.0" pickOnBounds="true" preserveRatio="true">
+                                          <ImageView fitHeight="35.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
                                                 <Image url="@../../res/img/search.png" />
                                              </image>
                                           </ImageView>
                                        </graphic>
                                        <font>
-                                          <Font size="36.0" />
+                                          <Font size="22.0" />
                                        </font>
                                     </Label>
                                     <ComboBox fx:id="comboIngredient" maxWidth="1.7976931348623157E308" onAction="#comboIngredientOnAction" promptText="Huvudingrediens" />
@@ -53,7 +53,7 @@
                                     <AnchorPane>
                                        <children>
                                           <CheckBox fx:id="checkMaxTime" alignment="CENTER" layoutX="22.0" layoutY="-3.0" mnemonicParsing="false" onAction="#checkMaxTimeOnAction" selected="true" text="Maxtid (minuter)" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-                                          <Slider fx:id="sliderMaxTime" layoutY="49.0" majorTickUnit="20.0" max="150.0" maxWidth="1.7976931348623157E308" min="10.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                                          <Slider fx:id="sliderMaxTime" layoutX="-2.0" layoutY="30.0" majorTickUnit="20.0" max="150.0" maxWidth="1.7976931348623157E308" min="10.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="10.0" AnchorPane.leftAnchor="-2.0" AnchorPane.rightAnchor="2.0" />
                                        </children>
                                     </AnchorPane>
                                     <ComboBox fx:id="comboCuisine" maxWidth="1.7976931348623157E308" onAction="#comboCuisineOnAction" promptText="Kök" />
@@ -63,57 +63,63 @@
                         </AnchorPane>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                            <children>
-                              <ListView fx:id="listSearchResult" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <ListView fx:id="listSearchResult" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children></AnchorPane>
                     </items>
                   </SplitPane>
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="643.0" prefWidth="673.0">
                <children>
-                  <ImageView fx:id="imgFoodBanner" fitHeight="334.0" fitWidth="1342.0" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <ImageView fx:id="imgFoodBanner" fitHeight="160.0" fitWidth="1342.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-657.0" AnchorPane.topAnchor="0.0">
                      <image>
                         <Image url="@../../res/img/default-food.jpg" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="imgRecipe" fitHeight="442.0" fitWidth="300.0" layoutX="14.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="17.0">
+                  <ImageView fx:id="imgRecipe" fitHeight="122.0" fitWidth="144.0" layoutX="14.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="17.0">
                      <image>
                         <Image url="@../../res/img/recipe1.jpg" />
                      </image>
                   </ImageView>
-                  <Label fx:id="labelName" layoutX="22.0" layoutY="354.0" prefHeight="84.0" prefWidth="956.0" AnchorPane.leftAnchor="22.0" AnchorPane.topAnchor="354.0">
+                  <Label fx:id="labelName" layoutX="17.0" layoutY="166.0" prefHeight="71.0" prefWidth="956.0" text="Recept" AnchorPane.leftAnchor="17.0" AnchorPane.topAnchor="166.0">
                      <font>
-                        <Font size="57.0" />
+                        <Font size="32.0" />
                      </font>
                   </Label>
-                  <Label layoutX="22.0" layoutY="477.0" text="Ingredienser">
+                  <Label layoutX="18.0" layoutY="260.0" prefHeight="36.0" prefWidth="196.0" text="Ingredienser">
                      <font>
-                        <Font size="43.0" />
+                        <Font size="20.0" />
                      </font>
                   </Label>
-                  <Label layoutX="453.0" layoutY="477.0" text="Beskrivning">
+                  <Label layoutX="244.0" layoutY="262.0" prefHeight="36.0" prefWidth="272.0" text="Beskrivning">
                      <font>
-                        <Font size="43.0" />
+                        <Font size="20.0" />
                      </font>
                   </Label>
-                  <Separator layoutX="433.0" layoutY="497.0" orientation="VERTICAL" prefHeight="620.0" prefWidth="6.0" />
-                  <TextArea fx:id="textDescription" editable="false" layoutX="453.0" layoutY="545.0" prefHeight="558.0" prefWidth="872.0" wrapText="true" AnchorPane.bottomAnchor="37.0" AnchorPane.leftAnchor="453.0" AnchorPane.rightAnchor="17.0" AnchorPane.topAnchor="545.0" />
-                  <ProgressBar fx:id="progressDiff" layoutX="21.0" layoutY="437.0" prefHeight="36.0" prefWidth="397.0" progress="0.0" AnchorPane.leftAnchor="21.0" />
-                  <ListView fx:id="listIngredients" layoutX="22.0" layoutY="545.0" prefHeight="558.0" prefWidth="397.0" AnchorPane.bottomAnchor="37.0" AnchorPane.leftAnchor="22.0" AnchorPane.topAnchor="545.0" />
-                  <HBox layoutX="454.0" layoutY="432.0" prefHeight="50.0" prefWidth="874.0" spacing="20.0" AnchorPane.leftAnchor="454.0" AnchorPane.rightAnchor="16.0">
+                  <Separator layoutX="227.0" layoutY="311.0" orientation="VERTICAL" prefHeight="316.0" prefWidth="5.0" AnchorPane.bottomAnchor="16.0" AnchorPane.topAnchor="311.0" />
+                  <TextArea fx:id="textDescription" editable="false" layoutX="246.0" layoutY="300.0" prefHeight="325.0" prefWidth="369.0" promptText="asdfsadf" wrapText="true" AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="246.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="300.0">
+                     <font>
+                        <Font size="9.0" />
+                     </font></TextArea>
+                  <ProgressBar fx:id="progressDiff" layoutX="18.0" layoutY="234.0" prefWidth="196.0" progress="0.0" AnchorPane.leftAnchor="18.0" />
+                  <ListView fx:id="listIngredients" layoutX="18.0" layoutY="299.0" prefHeight="168.0" prefWidth="196.0" AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="18.0" AnchorPane.topAnchor="299.0" />
+                  <HBox layoutX="244.0" layoutY="230.0" prefHeight="29.0" prefWidth="369.0" spacing="10.0" AnchorPane.leftAnchor="244.0" AnchorPane.rightAnchor="20.0">
                      <children>
                         <Label fx:id="labelServings" text="TESTST">
                            <graphic>
-                              <ImageView fitHeight="44.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="29.0" fitWidth="51.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../res/img/food.png" />
                                  </image>
                               </ImageView>
                            </graphic>
+                           <font>
+                              <Font size="12.0" />
+                           </font>
                         </Label>
                         <Label fx:id="labelTime" text="TESTSt">
                            <graphic>
-                              <ImageView fitHeight="48.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../res/img/time.png" />
                                  </image>
@@ -122,7 +128,7 @@
                         </Label>
                         <Label fx:id="labelCuisine" text="testst">
                            <graphic>
-                              <ImageView fitHeight="44.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="29.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../res/img/kettle.png" />
                                  </image>
@@ -131,7 +137,7 @@
                         </Label>
                         <Label fx:id="labelVeg" text="Vegetarisk">
                            <graphic>
-                              <ImageView fx:id="imgVeg" fitHeight="48.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgVeg" fitHeight="29.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../res/img/veg.png" />
                                  </image>
