Implements max price label in detail view

--- a/src/gui/lab2/MainView.fxml
+++ b/src/gui/lab2/MainView.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1142.0" prefWidth="1922.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.lab2.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.lab2.Controller">
    <children>
       <SplitPane dividerPositions="0.29797979797979796" prefHeight="1142.0" prefWidth="1922.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -63,7 +63,7 @@
                         </AnchorPane>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                            <children>
-                              <ListView fx:id="listSearchResult" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <ListView fx:id="listSearchResult" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children></AnchorPane>
                     </items>
                   </SplitPane>
@@ -71,7 +71,7 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <ImageView fx:id="imgFoodBanner" fitHeight="334.0" fitWidth="1342.0" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <ImageView fx:id="imgFoodBanner" fitHeight="334.0" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <image>
                         <Image url="@../../res/img/default-food.jpg" />
                      </image>
@@ -97,12 +97,12 @@
                      </font>
                   </Label>
                   <Separator layoutX="433.0" layoutY="497.0" orientation="VERTICAL" prefHeight="620.0" prefWidth="6.0" />
-                  <TextArea fx:id="textDescription" editable="false" layoutX="453.0" layoutY="545.0" prefHeight="558.0" prefWidth="872.0" wrapText="true" AnchorPane.bottomAnchor="37.0" AnchorPane.leftAnchor="453.0" AnchorPane.rightAnchor="17.0" AnchorPane.topAnchor="545.0" />
-                  <ProgressBar fx:id="progressDiff" layoutX="21.0" layoutY="437.0" prefHeight="36.0" prefWidth="397.0" progress="0.0" AnchorPane.leftAnchor="21.0" />
-                  <ListView fx:id="listIngredients" layoutX="22.0" layoutY="545.0" prefHeight="558.0" prefWidth="397.0" AnchorPane.bottomAnchor="37.0" AnchorPane.leftAnchor="22.0" AnchorPane.topAnchor="545.0" />
-                  <HBox layoutX="454.0" layoutY="432.0" prefHeight="50.0" prefWidth="874.0" spacing="20.0" AnchorPane.leftAnchor="454.0" AnchorPane.rightAnchor="16.0">
+                  <TextArea fx:id="textDescription" editable="false" layoutX="453.0" layoutY="545.0" wrapText="true" AnchorPane.bottomAnchor="37.0" AnchorPane.leftAnchor="453.0" AnchorPane.rightAnchor="17.0" AnchorPane.topAnchor="545.0" />
+                  <ProgressBar fx:id="progressDiff" layoutX="21.0" layoutY="437.0" prefWidth="397.0" progress="0.0" AnchorPane.leftAnchor="21.0" />
+                  <ListView fx:id="listIngredients" layoutX="22.0" layoutY="545.0" prefWidth="397.0" AnchorPane.bottomAnchor="37.0" AnchorPane.leftAnchor="22.0" AnchorPane.topAnchor="545.0" />
+                  <HBox layoutX="454.0" layoutY="432.0" spacing="25.0" AnchorPane.leftAnchor="454.0" AnchorPane.rightAnchor="16.0">
                      <children>
-                        <Label fx:id="labelServings" text="TESTST">
+                        <Label fx:id="labelServings">
                            <graphic>
                               <ImageView fitHeight="44.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -111,7 +111,7 @@
                               </ImageView>
                            </graphic>
                         </Label>
-                        <Label fx:id="labelTime" text="TESTSt">
+                        <Label fx:id="labelTime">
                            <graphic>
                               <ImageView fitHeight="48.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -120,7 +120,7 @@
                               </ImageView>
                            </graphic>
                         </Label>
-                        <Label fx:id="labelCuisine" text="testst">
+                        <Label fx:id="labelCuisine">
                            <graphic>
                               <ImageView fitHeight="44.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -140,6 +140,7 @@
                         </Label>
                      </children>
                   </HBox>
+                  <Label fx:id="labelPrice" layoutX="274.0" layoutY="492.0" text="(125 kr)" AnchorPane.leftAnchor="274.0" />
                </children></AnchorPane>
         </items>
       </SplitPane>
